--- a/frontend/src/styles/05-components/_buscador-card.scss
+++ b/frontend/src/styles/05-components/_buscador-card.scss
@@ -25,8 +25,8 @@
     color:         var(--color-text);
 
     &::placeholder {
-      color: var(--color-text);
-      opacity: 0.5;
+      color:   var(--color-placeholder);
+      opacity: 1;
     }
 
     &:focus {
