--- a/frontend/src/styles/05-components/_panel-generar-informe.scss
+++ b/frontend/src/styles/05-components/_panel-generar-informe.scss
@@ -85,8 +85,8 @@
     line-height:      var(--leading-tight);
 
     &::placeholder {
-      color:   var(--color-text);
-      opacity: 0.5;
+      color:   var(--color-placeholder);
+      opacity: 1;
     }
 
     &:focus-visible {
